# librefang

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  openapi.json
.github/scripts/: discussion-to-issue.sh
.github/workflows/: ci.yml  dashboard-build.yml  deploy-docs.yml  deploy-web.yml  discussion-to-issue.yml  issue-labels.yml  lighthouse.yml  pr-status-labels.yml  release-desktop.yml  release-shell.yml  test-web.yml
crates/librefang-api/: Cargo.toml
crates/librefang-api/dashboard/: .npmrc  AGENTS.md  package.json  pnpm-lock.yaml  vitest.config.ts
crates/librefang-api/dashboard/openapi/: generated.ts
crates/librefang-api/dashboard/src/: api.test.ts  api.ts  router.tsx  setupTests.ts
crates/librefang-api/dashboard/src/components/: AgentManifestForm.tsx  NotificationCenter.tsx  SchemaForm.tsx  TerminalTabs.tsx  TomlViewer.tsx
crates/librefang-api/dashboard/src/components/ui/: CommandPalette.tsx  Modal.tsx  MultiSelectCmdk.test.tsx  MultiSelectCmdk.tsx  SliderInput.tsx
crates/librefang-api/dashboard/src/lib/: agentManifest.test.ts  agentManifest.ts  agentManifestMarkdown.test.ts  agentManifestMarkdown.ts  store.ts  triggerPattern.test.ts  triggerPattern.ts
crates/librefang-api/dashboard/src/lib/http/: client.ts  errors.ts
crates/librefang-api/dashboard/src/lib/mutations/: agents-experiments.test.tsx  agents.test.tsx  agents.ts  analytics.ts  approvals.ts  channels.ts  config.ts  goals.ts  hands.test.tsx  hands.ts  mcp.ts  media.ts  memory.ts  misc-mutations.test.tsx  models.ts  network.ts  overview.ts  plugins.ts  providers.ts  runtime-skills.test.tsx  runtime.ts  schedules-config.test.tsx  schedules.test.tsx  schedules.ts  sessions.ts  skills.ts  terminal.ts  workflows.ts
crates/librefang-api/dashboard/src/lib/queries/: agents-experiments.test.tsx  agents.test.tsx  agents.ts  analytics.ts  approvals.ts  channels-models.test.tsx  channels.ts  config.test.tsx  config.ts  goals.ts  hands-stats.test.tsx  hands.ts  keys.test.ts  keys.ts  mcp.ts  media.ts  memory.test.tsx  memory.ts  models.ts  network.ts  overview.ts  plugins.ts  providers.ts  queries-enabled-guards.test.tsx  runtime-cron.test.tsx  runtime.ts  schedules.ts  sessions-hands.test.tsx  sessions.ts  skills-search.test.tsx  skills.ts  terminal.ts  workflows.test.tsx  workflows.ts
crates/librefang-api/dashboard/src/lib/test/: query-client.tsx
crates/librefang-api/dashboard/src/locales/: en.json  zh.json
crates/librefang-api/dashboard/src/pages/: A2APage.tsx  AgentsPage.tsx  AnalyticsPage.tsx  ApprovalsPage.tsx  ChannelsPage.tsx  ChatPage.tsx  CommsPage.tsx  ConfigPage.tsx  GoalsPage.tsx  HandsPage.tsx  McpServersPage.tsx  MediaPage.tsx  MemoryPage.tsx  ModelsPage.tsx  NetworkPage.tsx  OverviewPage.tsx  PluginsPage.tsx  ProvidersPage.tsx  RuntimePage.tsx  SchedulerPage.tsx  SessionsPage.tsx  SkillsPage.tsx  TerminalPage.tsx  WizardPage.tsx  WorkflowsPage.tsx
crates/librefang-api/src/: channel_bridge.rs  lib.rs  middleware.rs  openapi.rs  server.rs  terminal.rs  terminal_tmux.rs  ws.rs
crates/librefang-api/src/routes/: agents.rs  budget.rs  config.rs  network.rs  plugins.rs  providers.rs  skills.rs  system.rs  terminal.rs
crates/librefang-api/tests/: api_integration_test.rs
crates/librefang-channels/src/: bridge.rs  feishu.rs  irc.rs  telegram.rs
crates/librefang-cli/src/: main.rs
crates/librefang-cli/src/tui/: event.rs
crates/librefang-cli/src/tui/screens/: agents.rs  audit.rs  comms.rs  extensions.rs  (+12 more)
crates/librefang-desktop/: tauri.conf.json
crates/librefang-extensions/src/: catalog.rs  health.rs  installer.rs  lib.rs  registry.rs
crates/librefang-http/src/: lib.rs
crates/librefang-kernel/: Cargo.toml
crates/librefang-kernel-metering/src/: lib.rs
crates/librefang-kernel/src/: approval.rs  registry.rs  scheduler.rs  triggers.rs  wizard.rs
crates/librefang-kernel/src/kernel/: manifest_helpers.rs  mod.rs  tests.rs  workspace_setup.rs
crates/librefang-llm-driver/src/: lib.rs
crates/librefang-llm-drivers/src/drivers/: anthropic.rs  chatgpt.rs  claude_code.rs  codex_cli.rs  fallback.rs  gemini.rs  gemini_cli.rs  mod.rs  openai.rs  qwen_code.rs  token_rotation.rs  vertex_ai.rs
crates/librefang-memory/src/: proactive.rs  session.rs
crates/librefang-migrate/src/: openclaw.rs
crates/librefang-runtime-mcp/src/: lib.rs
crates/librefang-runtime-oauth/src/: chatgpt_oauth.rs
crates/librefang-runtime/src/: agent_loop.rs  catalog_sync.rs  compactor.rs  embedding.rs  lib.rs  mcp_migrate.rs  model_catalog.rs  proactive_memory.rs  prompt_builder.rs  registry_sync.rs  routing.rs  session_repair.rs  tool_runner.rs  web_fetch.rs
crates/librefang-runtime/tests/: mcp_oauth_integration.rs
crates/librefang-skills/: Cargo.toml
crates/librefang-skills/src/: evolution.rs  lib.rs  registry.rs  skillhub.rs  verify.rs
crates/librefang-testing/src/: tests.rs
crates/librefang-types/src/: agent.rs  approval.rs  event.rs  model_catalog.rs  taint.rs
crates/librefang-types/src/config/: types.rs  validation.rs
crates/librefang-types/tests/: agent_form_roundtrip.rs
docs/src/app/configuration/: page.mdx
docs/src/components/: Navigation.tsx
i18n/: README.zh.md
sdk/javascript/: package.json
sdk/python/: setup.py
sdk/rust/: Cargo.toml
web/: .gitignore  index.html  lighthouserc.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
web/e2e/: detail-dom.spec.ts  homepage.spec.ts  i18n.spec.ts  registry.spec.ts
web/public/: _worker.js  feed.xml  registry.json  sitemap.xml  sw.js
web/scripts/: fetch-registry.ts  gen-og-images.test.ts  gen-og-images.ts  gen-rss.test.ts  gen-rss.ts
web/src/: App.tsx  i18n.test.ts  i18n.ts  index.css  main.tsx  store.ts  useRegistry.ts
web/src/components/: Breadcrumbs.tsx  ErrorBoundary.tsx  InstallBanner.tsx  RegistryIcon.tsx  SearchDialog.tsx  SiteHeader.tsx
web/src/lib/: minimal-markdown.tsx  registry-raw.ts  toml-highlight.tsx  useFavorites.ts
web/src/pages/: MetricsPage.tsx  RegistryDetailPage.tsx  RegistryPage.tsx
web/workers/github-stats-worker/: index.js  openapi.yaml
(+14 files in other folders)
