[package]
name = "librefang-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the LibreFang Agent OS daemon"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-kernel = { path = "../librefang-kernel" }
librefang-runtime = { path = "../librefang-runtime" }
librefang-memory = { path = "../librefang-memory" }
librefang-channels = { path = "../librefang-channels", default-features = false }
librefang-wire = { path = "../librefang-wire" }
librefang-skills = { path = "../librefang-skills" }
librefang-hands = { path = "../librefang-hands" }
librefang-extensions = { path = "../librefang-extensions" }
librefang-migrate = { path = "../librefang-migrate" }
librefang-telemetry = { path = "../librefang-telemetry" }
anyhow = { workspace = true }
dashmap = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = "0.25"
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
socket2 = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
url = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
jsonwebtoken = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
argon2 = "0.5"
tracing-subscriber = { workspace = true }
utoipa = { version = "5", features = ["axum_extras"] }
include_dir = "0.7"

# Optional telemetry deps (gated behind `telemetry` feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

[features]
# default = ["all-channels", "telemetry"]
default = ["tiny"]

# OpenTelemetry tracing export + Prometheus metrics
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
]

# Individual channel features — forwarded to librefang-channels
channel-telegram = ["librefang-channels/channel-telegram"]
channel-discord = ["librefang-channels/channel-discord"]
channel-slack = ["librefang-channels/channel-slack"]
channel-matrix = ["librefang-channels/channel-matrix"]
channel-email = ["librefang-channels/channel-email"]
channel-voice = ["librefang-channels/channel-voice"]
channel-webhook = ["librefang-channels/channel-webhook"]
channel-whatsapp = ["librefang-channels/channel-whatsapp"]
channel-signal = ["librefang-channels/channel-signal"]
channel-teams = ["librefang-channels/channel-teams"]
channel-mattermost = ["librefang-channels/channel-mattermost"]
channel-irc = ["librefang-channels/channel-irc"]
channel-google-chat = ["librefang-channels/channel-google-chat"]
channel-twitch = ["librefang-channels/channel-twitch"]
channel-rocketchat = ["librefang-channels/channel-rocketchat"]
channel-zulip = ["librefang-channels/channel-zulip"]
channel-xmpp = ["librefang-channels/channel-xmpp"]
channel-bluesky = ["librefang-channels/channel-bluesky"]
channel-feishu = ["librefang-channels/channel-feishu"]
channel-line = ["librefang-channels/channel-line"]
channel-mastodon = ["librefang-channels/channel-mastodon"]
channel-messenger = ["librefang-channels/channel-messenger"]
channel-reddit = ["librefang-channels/channel-reddit"]
channel-revolt = ["librefang-channels/channel-revolt"]
channel-viber = ["librefang-channels/channel-viber"]
channel-flock = ["librefang-channels/channel-flock"]
channel-guilded = ["librefang-channels/channel-guilded"]
channel-keybase = ["librefang-channels/channel-keybase"]
channel-nextcloud = ["librefang-channels/channel-nextcloud"]
channel-nostr = ["librefang-channels/channel-nostr"]
channel-pumble = ["librefang-channels/channel-pumble"]
channel-threema = ["librefang-channels/channel-threema"]
channel-twist = ["librefang-channels/channel-twist"]
channel-webex = ["librefang-channels/channel-webex"]
channel-dingtalk = ["librefang-channels/channel-dingtalk"]
channel-discourse = ["librefang-channels/channel-discourse"]
channel-gitter = ["librefang-channels/channel-gitter"]
channel-gotify = ["librefang-channels/channel-gotify"]
channel-linkedin = ["librefang-channels/channel-linkedin"]
channel-mumble = ["librefang-channels/channel-mumble"]
channel-ntfy = ["librefang-channels/channel-ntfy"]
channel-qq = ["librefang-channels/channel-qq"]
channel-wechat = ["librefang-channels/channel-wechat"]
channel-wecom = ["librefang-channels/channel-wecom"]

all-channels = [
    "channel-telegram", "channel-discord", "channel-slack", "channel-matrix",
    "channel-email", "channel-webhook", "channel-whatsapp", "channel-signal",
    "channel-teams", "channel-mattermost", "channel-irc", "channel-google-chat",
    "channel-twitch", "channel-rocketchat", "channel-zulip", "channel-xmpp",
    "channel-bluesky", "channel-feishu", "channel-line", "channel-mastodon",
    "channel-messenger", "channel-reddit", "channel-revolt", "channel-viber",
    "channel-flock", "channel-guilded", "channel-keybase", "channel-nextcloud",
    "channel-nostr", "channel-pumble", "channel-threema", "channel-twist",
    "channel-webex", "channel-dingtalk", "channel-discourse", "channel-gitter",
    "channel-gotify", "channel-linkedin", "channel-mumble", "channel-ntfy",
    "channel-qq", "channel-voice", "channel-wechat", "channel-wecom",
]

# Mini: 12 core channels
mini = [
    "channel-telegram", "channel-discord", "channel-slack", "channel-matrix",
    "channel-email", "channel-webhook", "channel-whatsapp", "channel-signal",
    "channel-teams", "channel-mattermost", "channel-irc", "channel-google-chat",
]
tiny = [ "channel-feishu", "channel-wechat", "channel-wecom", "channel-email",
    "channel-telegram", ]
#     "channel-ntfy", "channel-webhook", "channel-qq", "channel-voice",

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["process"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
http-body-util = "0.1"
