[package]
name = "librefang-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Skill system for LibreFang — registry, loader, marketplace, and OpenClaw compatibility"

[dependencies]
dirs = "6"
librefang-types = { path = "../librefang-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_yaml = { workspace = true }
zip = { workspace = true }
aho-corasick = "1.1"
semver = "1"
fs2 = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
